# qwen_trans

./: .gitignore  README.md  check_cuda.py  load_python.sh  pyproject.toml  requirements.txt  run.py  train.py
