[project]
name = "qwen-trans"
version = "0.1.0"
description = ""
authors = [
    {name = "niushuai1991",email = "guisu2010@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11"
dependencies = [
    "bitsandbytes (>=0.45.2,<0.46.0)",
    "torch (>=2.6.0)",
    "trl (>=0.15.1,<0.16.0)",
    "unsloth (>=2025.2.12,<2026.0.0)",
    "setuptools (>=75.8.0,<76.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
