[project]
name = "qwen-trans"
version = "0.1.0"
description = ""
authors = [
    {name = "niushuai1991",email = "guisu2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes (>=0.45.2,<0.46.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "packaging (==24.1)",
    "unsloth (>=2025.2.15,<2026.0.0)",
    "gradio (>=5.17.1,<6.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.2"
torch = { version = "2.3.0", source="torch"}
torchaudio = { version = "2.3.1", source="torch"}
torchvision = { version = "0.18.1", source="torch"}

[[tool.poetry.source]]
name = "pypi"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.29.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
